# onesharepy

./: README.md  pyproject.toml  requirements.txt  setup.py  setup.py.bak
onesharepy/: __main__.py
