[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onesharepy"
version = "0.0.4"
description = "Download personal onedrive files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "xiongzhen" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Utilities',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Programming Language :: Python :: 3.13',
]
keywords = [
    'onedrive'
]
dependencies = [
    "aiohttp >= 3.12",
    "requests >= 2.32"
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/xiongzhen/onesharepy"
